finish API resources and routes
