# routes/api.php
@@ -21,4 +21,12 @@ Route::prefix('v1')->name('api.v1.')->group(function() {
     Route::get('/airports/{airport}/flights', [AirportController::class, 'flights'])
         ->name('airports.flights');
     Route::get('flights/{flight}/bookings', [FlightController::class, 'bookings'])->name('flights.bookings');
+    Route::get('/bookings/{booking}/passengers', [BookingController::class, 'passengers'])
+        ->name('bookings.passengers');
+    Route::get('/bookings/{booking}/tickets', [BookingController::class, 'tickets'])
+        ->name('bookings.tickets');
+    Route::get('/flights/{flight}/tickets', [FlightController::class, 'tickets'])
+        ->name('flights.tickets');
+    Route::get('/passengers/{passenger}/ticket', [PassengerController::class, 'ticket'])
+        ->name('passengers.ticket');
 });
